fixed footer alignment and separator margins

--- a/admin/admin.css
+++ b/admin/admin.css
@@ -58,7 +58,4 @@
   color: #ffffff;
   text-transform: capitalize; }
 
-#custom_portfolio_page_settings {
-  display: block !important; }
-
 /*# sourceMappingURL=admin.css.map */
