--- a/assets/scss/5-components/_site-footer.scss
+++ b/assets/scss/5-components/_site-footer.scss
@@ -35,6 +35,11 @@
             padding: 0.75em;
         }
     }
+
+    .sep {
+        margin-left: .5em;
+        margin-right: .5em;
+    }
 }
 
 .site-info {
